--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port = 5050
+application.name = Be_GESTSTOCK
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/geststock?serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password =
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
