--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/geststock?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# Specify the path of the OpenAPI documentation
+springdoc.api-docs.path=/api-docs
+
+# Specify the path of the Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Enable or disable Swagger UI
+springdoc.swagger-ui.enabled=true
